--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -179,7 +179,7 @@
         <div nstyle="margin-top:10px" class="row text-center">
           <div class="col" style="padding:15%">
             <div class="thumb-container">
-              <img ng-show="fileSrc && attachForm.file.$valid" ngf-thumbnail="picFile" class="upload thumb">
+              <img ng-show="fileSrc && attachForm.file.$valid" src="imageUri" class="upload thumb">
             </div>
           </div>
         </div>
