--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -180,7 +180,8 @@
         <div nstyle="margin-top:10px" class="row text-center">
           <div class="col" style="padding:15%">
             <div class="thumb-container">
-              <img ng-show="fileSrc && attachForm.file.$valid" src="imageUri" class="upload thumb">
+              imageUri:{{imageUri}}
+              <img ng-show="fileSrc && attachForm.file.$valid" ng-src="imageUri" class="upload thumb">
             </div>
           </div>
         </div>
