--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -181,7 +181,7 @@
           <div class="col" style="padding:15%">
             <div class="thumb-container">
               imageUri:{{imageUri}}
-              <img ng-show="fileSrc && attachForm.file.$valid" ng-src="imageUri" class="upload thumb">
+              <img ng-src="imageUri" class="upload thumb">
             </div>
           </div>
         </div>
