--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -174,21 +174,21 @@
    <i class=" icon ion-ios-folder-outline"></i>
       </button></div>
           </div>
-          <input ng-hide="1" type="file" name="file" ng-model="picFile" multiple>
+
         </ng-form>
 
         <div nstyle="margin-top:10px" class="row text-center">
           <div class="col" style="padding:15%">
             <div class="thumb-container">
-              imageUri:{{imageUri}}
+              -- imageUri:{{imageUri}} --
               <img ng-src="imageUri" class="upload thumb">
             </div>
           </div>
         </div>
 
-        <button class="button button-stable" ng-show="picFile">Remove</button>
+        <button class="button button-stable" ng-show="imageUri">Remove</button>
 
-        <button class="button button-stable" ng-click="uploadFile(picFile)">Submit</button>
+        <button class="button button-stable" ng-click="uploadFile(imageUri)">Submit</button>
 
         <span class="progress" ng-show="picFile.progress >= 0">
     <div style="width:{{picFile.progress}}%"
