--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -180,6 +180,23 @@
         <div nstyle="margin-top:10px" class="row text-center">
           <div class="col" style="padding:15%">
             <div class="thumb-container">
+              -- fileEntry:{{fileEntry}} --
+              <img ng-src="fileEntry" class="upload thumb">
+            </div>
+          </div>
+        </div>
+        <div nstyle="margin-top:10px" class="row text-center">
+          <div class="col" style="padding:15%">
+            <div class="thumb-container">
+              -- fileError:{{fileError}} --
+              <img ng-src="fileError" class="upload thumb">
+            </div>
+          </div>
+        </div>
+
+        <div nstyle="margin-top:10px" class="row text-center">
+          <div class="col" style="padding:15%">
+            <div class="thumb-container">
               -- imageUri:{{imageUri}} --
               <img ng-src="imageUri" class="upload thumb">
             </div>
