--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -173,7 +173,7 @@
    <i class=" icon ion-ios-folder-outline"></i>
  </button></div-->
 
-
+          {{imageUri}}
         </ng-form>
 
         <div nstyle="margin-top:10px" class="row text-center">
@@ -192,7 +192,7 @@
         </div>
         <button class="button button-stable" ng-show="imageUri">Remove</button>
 
-        <button class="button button-stable" ng-click="uploadFile(imageUri)">Submit</button>
+        <button class="button button-stable" ng-click="uploadFile()">Submit</button>
 
         <span class="progress" ng-show="picFile.progress >= 0">
     <div style="width:{{picFile.progress}}%"
