--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -177,20 +177,21 @@
         </ng-form>
 
 
-        <div nstyle="margin-top:10px" class="row text-center">
+        <div ng-if="imageUri" nstyle="margin-top:10px" class="row text-center">
           <div class="col" style="padding:15%">
             <div class="thumb-container">
               <img style="height:40px" ng-src="{{imageUri}}" class="upload thumb">
             </div>
           </div>
         </div>
+
         <button class="button button-stable" ng-show="imageUri">Remove</button>
 
         <button class="button button-stable" ng-click="uploadFile()">Submit</button>
 
-        <span class="progress" ng-show="picFile.progress >= 0">
-    <div style="width:{{picFile.progress}}%"
-        ng-bind="picFile.progress + '%'"></div>
+        <span class="progress" ng-show="progress >= 0">
+    <div style="width:{{progress}}%"
+        ng-bind="progress + '%'"></div>
   </span>
         <div>
           ff: {{uploadState}}
