--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -129,7 +129,7 @@
 
             </label>
         <label class="item no-border item-input item-text-wrap">
-            <textarea wrap="true" ng-model="lead.NOTE"></textarea>
+            <textarea class="ion-item item item-text-wrap" ng-model="lead.NOTE"></textarea>
         </label>
       </div>
     </ion-content>
