--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -10,7 +10,7 @@
   </ion-nav-title>
   <ng-form role="form" name="leadform" ng-init="forms.leadForm=leadform" novalidate>
 
-    <ion-content style="height: calc(100% - 100px);" id="new_lead" padding="true">
+    <ion-content scroll="true" style="height: calc(100% - 100px);" id="new_lead" padding="true">
       <fancy-select class="fancy-select text-right" header-text="בחר סוג ליד" items="typesByFormType" value="lead.LEAD_TYPE" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד" not-img-class="hidden" note-text=" : סוג ליד "
         value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl">
       </fancy-select>
