--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -75,13 +75,14 @@
             <table style="width:100%" class="table margin-top-5">
               <tr>
                 <td class="text-right"><span class="label">שעות רצויות לחזרה</span></td>
-                <td class="text-center">
+                <td class="text-center ion-item">
                   <select ng-change="recreateEndHour()" name="from_hour" class="form-control select" ng-model="lead.from_hour"
                   ng-options="option for option in from_hour_range"  ng-selected="option==lead.from_hour"  required />
                       <!--option ng-repeat="option in from_hour_range" ng-selected="option==lead.from_hour" value="{{option}}">{{option}}</option-->
-                  </select></td>
-                  <td class="text-center" style="width:10%;"> - </td>
-                <td class="text-left  item-input item-text-wrap">
+                  </select>
+                </td>
+                <td class="text-center" style="width:10%;"> - </td>
+                <td class="text-left  ion-item">
                   <select ng-click="recreateEndHour()" name="to_hour" class="form-control select" ng-model="lead.to_hour"
                   ng-options="option for option in to_hour_range"  ng-selected="option==lead.to_hour"  required />
 
