--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -8,9 +8,10 @@
       </div>
     </div>
   </ion-nav-title>
-  <ng-form role="form" name="leadform" ng-init="forms.leadForm=leadform" novalidate>
+  <ion-content scroll="true" style="height: calc(100% - 100px);" id="new_lead" padding="true">
+    <ng-form role="form" name="leadform" ng-init="forms.leadForm=leadform" novalidate>
 
-    <ion-content scroll="true" style="height: calc(100% - 100px);" id="new_lead" padding="true">
+
       <fancy-select class="fancy-select text-right" header-text="בחר סוג ליד" items="typesByFormType" value="lead.LEAD_TYPE" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד" not-img-class="hidden" note-text=" : סוג ליד "
         value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl">
       </fancy-select>
@@ -72,23 +73,23 @@
               יש להזין מס' תקין'
               </label>
         <label class="no-border margin-top-10">
-            <table style="width:100%" class="table margin-top-5">
+            <table style="width:100%" class="table margin-top-5 list">
               <tr>
-                <td class="text-right"> <span class="label"> שעות רצויות לחזרה </span> </td>
-                <td class="item text-center ion-item">
+                <td class="text-right"> <span class="label">  &nbsp; שעות רצויות לחזרה </span> </td>
+                <td class="text-center">
+                  <div class="item item-input no-border">
                   <select ng-change="recreateEndHour()" name="from_hour" class="form-control select" ng-model="lead.from_hour"
                   ng-options="option for option in from_hour_range"  ng-selected="option==lead.from_hour"  required />
                       <!--option ng-repeat="option in from_hour_range" ng-selected="option==lead.from_hour" value="{{option}}">{{option}}</option-->
                   </select>
+                </div>
                 </td>
                 <td class="text-center" style="width:10%;"> - </td>
-                <td class="item  text-left  ion-item">
+                <td class="text-left">
+                  <div class="item item-input no-border">
                   <select ng-click="recreateEndHour()" name="to_hour" class="form-control select" ng-model="lead.to_hour"
                   ng-options="option for option in to_hour_range"  ng-selected="option==lead.to_hour"  required />
-
-                  <!--select name="to_hour" class="form-control select" ng-model="lead.to_hour" required />
-                      <option ng-repeat="option in to_hour_range"  ng-selected="option==lead.to_hour" value="{{option}}">{{option}}</option>
-                  </select-->
+                </div>
                 </td>
               </tr>
             </table>
@@ -133,24 +134,14 @@
             <textarea class="ion-item item item-text-wrap" ng-model="lead.NOTE"></textarea>
         </label>
       </div>
-    </ion-content>
-    <!--ion-footer-bar style="height:50px;max-height:50px" align-title="right">
-      <div class="row">
-        <div class="col">
-          <button class="button button-block button-large button-positive icon-right ion-paper-airplane" ng-click="showBtnActions()">פעולות</button>
-        </div>
-        <div class="col">
-          <button class="button button-block button-large button-balanced icon-right ion-document-text" ng-click="NotePopup()">הערה</button>
-        </div>
-      </div-->
-    </ion-footer-bar>
-    <div style="" class="bar bar-footer bar-clean">
-      <a class="button button-block  button-positive icon-right ion-paper-airplane" ng-show="!lead.LEAD_ID" ng-click="submit(leadform)" class="title">פתיחת ליד</a>
-      <a class="button button-block  button-balanced icon-right ion-document-text" ng-show="lead.LEAD_ID" ng-click="submit(leadform)" class="title">עדכן ליד עצמי</a>
-      <a class="button button-block  button-danger icon-right ion-document-text" ng-show="lead.LEAD_ID" ng-click="delete(lead.LEAD_ID)" class="title">מחק ליד עצמי</a>
-    </div>
-  </ng-form>
+    </ng-form>
+  </ion-content>
 
+  <div style="" class="bar bar-footer bar-clean">
+    <a class="button button-block  button-positive icon-right ion-paper-airplane" ng-show="!lead.LEAD_ID" ng-click="submit(leadform)" class="title">פתיחת ליד</a>
+    <a class="button button-block  button-balanced icon-right ion-document-text" ng-show="lead.LEAD_ID" ng-click="submit(leadform)" class="title">עדכן ליד עצמי</a>
+    <a class="button button-block  button-danger icon-right ion-document-text" ng-show="lead.LEAD_ID" ng-click="delete(lead.LEAD_ID)" class="title">מחק ליד עצמי</a>
+  </div>
   <script id="upload.html" type="text/ng-template">
     <ion-modal-view class="pele-background">
       <ion-header-bar class="bar bar-header bar-positive">
